<resources>
<string name="app_name">My BMI Calculator</string>
<string name="weightInput">Weight</string>
<string name="heightInput">Height</string>
<string name="calculate">calculate</string>
<string name="reset">reset data</string>
    <string name="centimeter_radio">Centimeter</string>
    <string name="meter_radio">Meter</string>
    <string name="gram_radio">Gram</string>
    <string name="kg_radio">KG</string>
</resources>
