<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weightInput"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioGroupWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/raidoKG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kg_radio" />

        <RadioButton
            android:id="@+id/radioG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gram_radio" />
    </RadioGroup>

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/heightInput"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/radioGroupHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meter_radio" />

        <RadioButton
            android:id="@+id/radioCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centimeter_radio" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/reset" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calculate Date:" />

    <TextView
        android:id="@+id/tvBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BMI Result:0.0" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" " />


</LinearLayout>
